# valkyrie

./: .dockerignore  .env.distribution  .gitignore  .pre-commit-config.yaml  Caddyfile  LICENSE  Makefile  README.md  arch.sh  distibution.env  distribution.env  docker-compose.yml  flake.nix  generate.go  go.mod  go.sum  justfile  kind.yaml  main.go  mkdocs.yml  packages.sh  pyproject.toml  result  skaffold.yaml  sqlc.yaml
.42c/: conf.yaml
.github/workflows/: publish_docs.yml
agent/: go.mod  go.sum  main.go
agent/command/: command.go
agent/logs/: logs.go
agent/schema/: execute_command.go
agent/schemas/: AddFile.go  CommandReadOutput.go  CommandReadOutputResponse.go  CommandTerminate.go  CommandTerminateResponse.go  CommandWriteInput.go  CommandWriteInputResponse.go  DeleteDirectory.go  DeleteDirectoryResponse.go  DeleteFile.go  DeleteFileResponse.go  Error.go  ExecuteCommand.go  (+27 more)
builds/: base.go.nix  builds.just  go.nix
deployments/: deployments.just
dockerfiles/: nix.dockerfile
docs/: index.md  pyproject.toml  shell.nix
frontend/: deps.nix  distribution.env  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
hack/: install_nix.bash  nix_run.sh  nix_setup.sh  packages.sh  update_nix_hash.sh
mcp/: README.md  mcp_doc.md  pyproject.toml
mcp/src/valkyrie-mcp/: server.py
oas/: Makefile  odin-schema.yml  redocly.yml  schema.yml  shell.nix
schemas/: Makefile  odin-schema.yml  redocly.yml  schemas.just  shell.nix  valkyrie-schema.yml
scripts/: nix_env_init.sh
sdk/python/pyvalkyrie/: client.py  config.py  generate.py  pyproject.toml  sandbox.py  schema.py  terminal.py
sdk/python/pyvalkyrie/schemas/: __init__.py  command.py  file.py  sandbox.py  terminal.py
sdk/pyvalkyrie/: pyproject.toml  test.ipynb  test.py
sdk/pyvalkyrie/src/: generate.py
sdk/pyvalkyrie/src/pyvalkyrie/: client.py  config.py  directory.py  exception.py  execution.py  file.py  log.py  sandbox.py  terminal.py  websocket.py
sdk/pyvalkyrie/src/pyvalkyrie/schemas/: __init__.py  execute.py  file.py  packages.py
testing/: Makefile
(+891 files in other folders)
