[project]
name = "valkyrie-mcp"
version = "0.1.0"
description = "MCP server for valkyrie"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "httpx>=0.28.1",
 "mcp[cli]>=1.6.0",
 "pydantic-settings>=2.8.1",
 "pyvalkyrie",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
pyvalkyrie = { workspace = true }
