[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvalkyrie"
version = "0.0.1"
description = "Python library to interact with valkyrie"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
]

[tools.hatch.build.targets.wheel]
packages = ["src/pyvalkyrie"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
