[project]
name = "pyvalkyrie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "websockets>=14.2",
]


[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs",
    "tests",
    "migrations",
    "frontend",
]

[tool.ruff.lint]
ignore = ["F405", "F841"]

[tool.ruff.isort]
lines-after-imports = 2
lines-between-types = 1
section-order = ["future", "standard-library", "third-party", "local-folder"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
